Add Google OAuth 2.0 OpenID Connect support

--- a/quetz/basic_frontend/index.html
+++ b/quetz/basic_frontend/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <h1>Quetz</h1>
-<a href="/auth/github/login" style="margin-right: 100px" id="login">login with github</a>
+<a href="/auth/github/login" style="margin-right: 100px" id="github_login">login with github</a>
+<a href="/auth/google/login" style="margin-right: 100px" id="google_login">login with google</a>
 <a href="/auth/github/revoke" style="margin-right: 100px" id="revoke">revoke github</a>
+<a href="/auth/google/revoke" style="margin-right: 100px" id="revoke">revoke google</a>
 <a href="/auth/logout" id="logout">logout</a>
 <div id="status"></div>
 
