--- a/quetz/basic_frontend/index.html
+++ b/quetz/basic_frontend/index.html
@@ -49,8 +49,10 @@
 <body>
 <h1>Quetz</h1>
 <a href="/auth/github/login" style="margin-right: 100px" id="github_login">login with github</a>
+<a href="/auth/gitlab/login" style="margin-right: 100px" id="gitlab_login">login with gitlab</a>
 <a href="/auth/google/login" style="margin-right: 100px" id="google_login">login with google</a>
 <a href="/auth/github/revoke" style="margin-right: 100px" id="revoke">revoke github</a>
+<a href="/auth/gitlab/revoke" style="margin-right: 100px" id="revoke">revoke gitlab</a>
 <a href="/auth/google/revoke" style="margin-right: 100px" id="revoke">revoke google</a>
 
 <div class="modal">
