feat: adds AzureAD oauth
Co-authored-by: Ernst Luring <eluring@smart-robotics.nl>
Co-authored-by: Bas Zalmstra <zalmstra.bas@gmail.com>

--- a/quetz/basic_frontend/index.html
+++ b/quetz/basic_frontend/index.html
@@ -51,9 +51,11 @@
 <a href="/auth/github/login" style="margin-right: 100px" id="github_login">login with github</a>
 <a href="/auth/gitlab/login" style="margin-right: 100px" id="gitlab_login">login with gitlab</a>
 <a href="/auth/google/login" style="margin-right: 100px" id="google_login">login with google</a>
+<a href="/auth/azuread/login" style="margin-right: 100px" id="azuread_login">login with AzureAD</a>
 <a href="/auth/github/revoke" style="margin-right: 100px" id="revoke">revoke github</a>
 <a href="/auth/gitlab/revoke" style="margin-right: 100px" id="revoke">revoke gitlab</a>
 <a href="/auth/google/revoke" style="margin-right: 100px" id="revoke">revoke google</a>
+<a href="/auth/azuread/revoke" style="margin-right: 100px" id="revoke">revoke AzureAD</a>
 
 <div class="modal">
   <div class="modal-content">
