--- a/quetz/basic_frontend/index.html
+++ b/quetz/basic_frontend/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Quetz</title>
     <style>
-    .modal {
+      .modal {
         position: fixed;
         left: 0;
         top: 0;
@@ -14,9 +14,10 @@
         opacity: 0;
         visibility: hidden;
         transform: scale(1.1);
-        transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
-    }
-    .modal-content {
+        transition: visibility 0s linear 0.25s, opacity 0.25s 0s,
+          transform 0.25s;
+      }
+      .modal-content {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -25,8 +26,8 @@
         padding: 1rem 1.5rem;
         width: 24rem;
         border-radius: 0.5rem;
-    }
-    .close-button {
+      }
+      .close-button {
         float: right;
         width: 1.5rem;
         line-height: 1.5rem;
@@ -34,97 +35,119 @@
         cursor: pointer;
         border-radius: 0.25rem;
         background-color: lightgray;
-    }
-    .close-button:hover {
+      }
+      .close-button:hover {
         background-color: darkgray;
-    }
-    .show-modal {
+      }
+      .show-modal {
         opacity: 1;
         visibility: visible;
-        transform: scale(1.0);
+        transform: scale(1);
         transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
-    }
+      }
     </style>
-</head>
-<body>
-<h1>Quetz</h1>
-<a href="/auth/github/login" style="margin-right: 100px" id="github_login">login with github</a>
-<a href="/auth/gitlab/login" style="margin-right: 100px" id="gitlab_login">login with gitlab</a>
-<a href="/auth/google/login" style="margin-right: 100px" id="google_login">login with google</a>
-<a href="/auth/azuread/login" style="margin-right: 100px" id="azuread_login">login with AzureAD</a>
-<a href="/auth/github/revoke" style="margin-right: 100px" id="revoke">revoke github</a>
-<a href="/auth/gitlab/revoke" style="margin-right: 100px" id="revoke">revoke gitlab</a>
-<a href="/auth/google/revoke" style="margin-right: 100px" id="revoke">revoke google</a>
-<a href="/auth/azuread/revoke" style="margin-right: 100px" id="revoke">revoke AzureAD</a>
+  </head>
+  <body>
+    <h1>Quetz</h1>
+    <a href="/auth/github/login" style="margin-right: 100px" id="github_login"
+      >login with github</a
+    >
+    <a href="/auth/gitlab/login" style="margin-right: 100px" id="gitlab_login"
+      >login with gitlab</a
+    >
+    <a href="/auth/google/login" style="margin-right: 100px" id="google_login"
+      >login with google</a
+    >
+    <a href="/auth/azuread/login" style="margin-right: 100px" id="azuread_login"
+      >login with AzureAD</a
+    >
+    <a href="/auth/github/revoke" style="margin-right: 100px" id="revoke"
+      >revoke github</a
+    >
+    <a href="/auth/gitlab/revoke" style="margin-right: 100px" id="revoke"
+      >revoke gitlab</a
+    >
+    <a href="/auth/google/revoke" style="margin-right: 100px" id="revoke"
+      >revoke google</a
+    >
+    <a href="/auth/azuread/revoke" style="margin-right: 100px" id="revoke"
+      >revoke AzureAD</a
+    >
 
-<div class="modal">
-  <div class="modal-content">
-    <span class="close-button">&times;</span>
-    <div id="modalmsg">Hello, I am a modal!</div>
-  </div>
-</div>
-<a href="/auth/logout" id="logout">logout</a>
-<div id="status"></div>
+    <div class="modal">
+      <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <div id="modalmsg">Hello, I am a modal!</div>
+      </div>
+    </div>
+    <a href="/auth/logout" id="logout">logout</a>
+    <div id="status"></div>
 
-<script>
+    <script>
+      const status = document.getElementById("status");
 
-    const status = document.getElementById('status');
+      getProfile();
 
-    getProfile();
+      var modal = document.querySelector(".modal");
+      var trigger = document.querySelector(".trigger");
+      var closeButton = document.querySelector(".close-button");
+      const modalmsg = document.getElementById("modalmsg");
 
-    var modal = document.querySelector(".modal");
-    var trigger = document.querySelector(".trigger");
-    var closeButton = document.querySelector(".close-button");
-    const modalmsg = document.getElementById('modalmsg');
-
-
-    function toggleModal() {
+      function toggleModal() {
         modal.classList.toggle("show-modal");
-    }
+      }
 
-    function windowOnClick(event) {
+      function windowOnClick(event) {
         if (event.target === modal) {
-            toggleModal();
-        }
-    }
-
-    closeButton.addEventListener("click", toggleModal);
-    window.addEventListener("click", windowOnClick);
-
-    function getApiKey() {
-      fetch('/api/api-keys', {
-        method: 'POST',
-        body: JSON.stringify({"description": "default key", "roles":[]}),
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      })
-            .then(response => {console.log(response.status); return response.json()})
-      .then(data => {
-          modalmsg.innerHTML = `API key: <pre>${data.key}</pre>`;
           toggleModal();
-      });
-    }
+        }
+      }
 
-    function getProfile() {
-        fetch('/api/me')
-            .then(response => {
-                if (response.status === 200) {
-                    return response.json()
-                } else if (response.status === 401) {
-                    status.innerHTML = 'not logged in';
-                    throw Error("");
-                } else {
-                    status.innerHTML = `error: ${response.status}`;
-                    throw Error(`error: ${response.status}`);
-                }
-            })
-            .then(data => {
-                var name = data.name || data.user.username;
-                status.innerHTML = `<h2>Welcome ${name}</h2><img height="50px" src="${data.avatar_url}"/><br><pre>${JSON.stringify(data, null, 2)}</pre><br><button type="submit" onclick="getApiKey()">Get API key</button>`;
-            });
-    }
+      closeButton.addEventListener("click", toggleModal);
+      window.addEventListener("click", windowOnClick);
 
-</script>
-</body>
+      function getApiKey() {
+        fetch("/api/api-keys", {
+          method: "POST",
+          body: JSON.stringify({ description: "default key", roles: [] }),
+          headers: {
+            "Content-Type": "application/json",
+          },
+        })
+          .then((response) => {
+            console.log(response.status);
+            return response.json();
+          })
+          .then((data) => {
+            modalmsg.innerHTML = `API key: <pre>${data.key}</pre>`;
+            toggleModal();
+          });
+      }
+
+      function getProfile() {
+        fetch("/api/me")
+          .then((response) => {
+            if (response.status === 200) {
+              return response.json();
+            } else if (response.status === 401) {
+              status.innerHTML = "not logged in";
+              throw Error("");
+            } else {
+              status.innerHTML = `error: ${response.status}`;
+              throw Error(`error: ${response.status}`);
+            }
+          })
+          .then((data) => {
+            var name = data.name || data.user.username;
+            status.innerHTML = `<h2>Welcome ${name}</h2><img height="50px" src="${
+              data.avatar_url
+            }"/><br><pre>${JSON.stringify(
+              data,
+              null,
+              2
+            )}</pre><br><button type="submit" onclick="getApiKey()">Get API key</button>`;
+          });
+      }
+    </script>
+  </body>
 </html>
